--- a/package.yaml
+++ b/package.yaml
@@ -16,9 +16,11 @@ dependencies:
   - base >= 4.11 && < 10
   - rio >= 0.1.12.0
   # library
+  - dns
   - iso3166-country-codes
   - iso639
   - raw-strings-qq
+  - string-transform
   # for debug
   - pretty-simple
 
