modified: 大きいリストを単一ソースコードから外部ファイルに移動
追加時辞書順ソートする時に選択が面倒になったため。
追加してソートするコマンドラインツールでも用意した方が良いかもしれない。

--- a/package.yaml
+++ b/package.yaml
@@ -16,6 +16,8 @@ dependencies:
   - base >= 4.11 && < 10
   - rio >= 0.1.12.0
   # library
+  - convertible
+  - file-embed
   - iso3166-country-codes
   - iso639
   - raw-strings-qq
