build: language: GHC2021
言語バージョン指定をGHC2021にして、
比較的安全な言語拡張をプロジェクト単位で有効にしてしまいます。
警告に合わせて言語拡張を消して、
newtypeのderivingを使うと意味が変わってしまうので、
個別にinstanceを作っています。

--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,6 @@
 name: uBlacklistRule
 version: 0.1.0.0
+description: uBlacklist向けのルールです。
 github: ncaq/uBlacklistRule
 license: MIT
 author: ncaq
@@ -9,7 +10,49 @@ copyright: © ncaq
 extra-source-files:
   - README.md
 
-description: uBlacklist向けのルールです。
+language: GHC2021
+
+default-extensions:
+  - BangPatterns
+  - BinaryLiterals
+  - ConstraintKinds
+  - DataKinds
+  - DefaultSignatures
+  - DeriveDataTypeable
+  - DeriveFoldable
+  - DeriveFunctor
+  - DeriveGeneric
+  - DeriveTraversable
+  - DoAndIfThenElse
+  - EmptyDataDecls
+  - ExistentialQuantification
+  - FlexibleContexts
+  - FlexibleInstances
+  - FunctionalDependencies
+  - GADTs
+  - GeneralizedNewtypeDeriving
+  - InstanceSigs
+  - KindSignatures
+  - LambdaCase
+  - MultiParamTypeClasses
+  - MultiWayIf
+  - NamedFieldPuns
+  - NoImplicitPrelude
+  - OverloadedStrings
+  - PartialTypeSignatures
+  - PatternGuards
+  - PolyKinds
+  - RankNTypes
+  - RecordWildCards
+  - ScopedTypeVariables
+  - StandaloneDeriving
+  - TupleSections
+  - TypeFamilies
+  - TypeSynonymInstances
+  - ViewPatterns
+
+other-extensions:
+  - TemplateHaskell
 
 dependencies:
   # prelude
