build(test): add hspec-discover to test build-tools in package.yaml

--- a/package.yaml
+++ b/package.yaml
@@ -101,7 +101,8 @@ tests:
       - aeson
       - hspec
       - http-conduit
-
+    build-tools:
+      - hspec-discover
     ghc-options:
       - -threaded
       - -rtsopts
