ci: set Nix sandbox mode to relaxed in check workflow

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,6 +12,7 @@ jobs:
         with:
           extra_nix_config: |
             accept-flake-config = true
+            sandbox = relaxed
       - uses: cachix/cachix-action@v16
         with:
           name: u-blacklist-rule
